--- a/readme
+++ b/readme
@@ -1,5 +1,5 @@
 
 Command to build it
-docker build -t g1eagle/rpi-cowrie https://raw.githubusercontent.com/g1eagle/Rpi-Cowrie/master/Dockerfile
+wget the install.sh and run the file.
+This should be working now, but it remains untested. 
 
-This so far "appears to wokr" more testing will need to happen to make sure it's working correctly.
